Ajustes CSS y html
se sacaron <br> entre los títulos de lineas de investigación. ajustes
varios de css.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                 <div class="texto">
                   <p>6 proyectos</p>
-                  <h4>Procesos de <br> aguas <br> superficiales y <br> amenazas <br> naturales <br> asociadas</h4>
+                  <h4>Procesos de <br> aguas superficiales y amenazas naturales asociadas</h4>
                 </div>
                 <div class="datos">
                   <p><span>AREA</span><br>
@@ -220,7 +220,7 @@
 
                 <div class="texto">
                   <p>5 proyectos</p>
-                  <h4>Evaluación de <br> vulnerabilidad y <br> riesgo de <br> sistemas físicos <br> y sociales</h4>
+                  <h4>Evaluación de <br> vulnerabilidad y riesgo de sistemas físicos y sociales</h4>
                 </div>
                 <div class="datos">
                   <p><span>AREA</span><br>
@@ -242,7 +242,7 @@
 
                 <div class="texto">
                   <p>2 proyectos</p>
-                  <h4>Gestión de <br> desastres y <br> respuesta a la <br> emergencia</h4>
+                  <h4>Gestión de <br> desastres y respuesta a la emergencia</h4>
                 </div>
                 <div class="datos">
                   <p><span>AREA</span><br>
@@ -264,7 +264,7 @@
 
                 <div class="texto">
                   <p>3 proyectos</p>
-                  <h4>Mitigación <br> sustentable del <br> riesgo</h4>
+                  <h4>Mitigación sustentable del riesgo</h4>
                 </div>
                 <div class="datos">
                   <p><span>AREA</span><br>
@@ -286,7 +286,7 @@
 
                 <div class="texto">
                   <p>5 proyectos</p>
-                  <h4>Información, <br> comunicación y <br> tecnologías para <br> la gestión de <br> desastres</h4>
+                  <h4>Información, <br> comunicación y tecnologías para la gestión de desastres</h4>
                 </div>
                 <div class="datos">
                   <p><span>AREA</span><br>
