--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <div role="tabpanel" class="tab-pane" id="publicaciones">
 
           <div class="container">
-            <p class="col-sm-6 col-sm-offset-3 bajada">“6 líneas de investigación que reunen investigadores de las ciencias naturales y físicas; ingeniería y tecnología; ciencias de la salud y sociales para entender, anticipar y mitigar las posibles consecuencias de los desastres.”</p>
+            <p class="bajada">“6 líneas de investigación que reunen investigadores de las ciencias naturales y físicas; ingeniería y tecnología; ciencias de la salud y sociales para entender, anticipar y mitigar las posibles consecuencias de los desastres.”</p>
           </div>
 
           <div class="contBox">
@@ -430,7 +430,7 @@
         <div role="tabpanel" class="tab-pane" id="proyectos">
           
           <div class="container">
-            <p class="col-sm-6 col-sm-offset-3 bajada">6 líneas de investigación que reunen investigadores de las ciencias naturales y físicas; ingeniería y tecnología; ciencias de la salud y sociales para entender, anticipar y mitigar las posibles consecuencias de los desastres.</p>
+            <p class="bajada">6 líneas de investigación que reunen investigadores de las ciencias naturales y físicas; ingeniería y tecnología; ciencias de la salud y sociales para entender, anticipar y mitigar las posibles consecuencias de los desastres.</p>
           </div>
 
           <div class="contBox">
